hphp/hack/test/typecheck/xhp_attr_spread_generic.php.exp
File "xhp_attr_spread_generic.php", line 18, characters 15-17:
Invalid xhp value for attribute :my-vec in :my-bar (Typing[4343])
File "xhp_attr_spread_generic.php", line 8, characters 17-19:
Expected int
File "xhp_attr_spread_generic.php", line 17, characters 29-33:
But got string
